removed -XX:MaxPermSize=128m java option