@@ -11,4 +11,4 @@ RUN chown -R 999:999 /var/lib/jetty/data_dir
 # not sure if it is necessary to bother changing this from default of 8080 or not.
 EXPOSE 8081
 # run it with all the additional parameters
-ENTRYPOINT ["java","-XX:MaxPermSize=128m","-Djava.io.tmpdir=/tmp/jetty","-DGEOSERVER_DATA_DIR=/var/lib/jetty/data_dir","-Djava.awt.headless=true","-DSTOP.PORT=8079","-DSTOP.KEY=geoserver","-jar","/usr/local/jetty/start.jar","jetty.http.port=8081"]
+ENTRYPOINT ["java","-Djava.io.tmpdir=/tmp/jetty","-DGEOSERVER_DATA_DIR=/var/lib/jetty/data_dir","-Djava.awt.headless=true","-DSTOP.PORT=8079","-DSTOP.KEY=geoserver","-jar","/usr/local/jetty/start.jar","jetty.http.port=8081"]
